finished promocion page

--- a/promocion.html
+++ b/promocion.html
@@ -118,6 +118,13 @@
                     <h2>Voki</h2>
                     <hr class="star-light">
                 </div>
+                <div class="row">    
+                    <div class="col-sm-offset-3 col-sm-6 col-xs-12 text-center">
+                        <object height="400" width="300" classid="clsid:D27CDB6E-AE6D-11cf-96B8-444553540000"codebase="http://download.macromedia.com/pub/shockwave/cabs/flash/swflash.cab#version=9,0,28,0" id="widget_name">
+                            <param name="movie" value="http://vhss-d.oddcast.com/vhss_editors/voki_player.swf?doc=http://vhss-d.oddcast.com/php/vhss_editors/getvoki/chsm=954f9ed666103d9b1e4344c7698ccde7%26sc=11367445" /><param name="quality" value="high" /><param name="allowScriptAccess" value="always" /><param name="width" value="300" /><param name="height" value="400" /><param name="allowNetworking" value="all"/><param name="wmode" value="transparent" /><param name="allowFullScreen" value="true" /><embed height="400" width="300" src="http://vhss-d.oddcast.com/vhss_editors/voki_player.swf?doc=http%3A%2F%2Fvhss-d.oddcast.com%2Fphp%2Fvhss_editors%2Fgetvoki%2Fchsm=954f9ed666103d9b1e4344c7698ccde7%26sc=11367445" quality="high" allowScriptAccess="always" allowNetworking="all" wmode="transparent" allowFullScreen="true" pluginspage="http://www.adobe.com/shockwave/download/download.cgi?P1_Prod_Version=ShockwaveFlash" type="application/x-shockwave-flash" name="widget_name">
+                        </object>
+                    </div>
+                </div>
         	</div>
     	</div>
         
@@ -132,10 +139,27 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-offset-xs-2 col-xs-8">
-                    <iframe webkitAllowFullScreen mozallowfullscreen allowFullScreen width="800" height="550" src="https://www.blendspace.com/lessons/vwUVc80dCsqWkQ/cavernas-de-camuy?feature=embed" frameborder="0" ></iframe>
+                <div class="col-xs-12 col-md-8 col-md-offset-2 text-center">
+                    <iframe webkitAllowFullScreen mozallowfullscreen allowFullScreen class="col-xs-12 col-md-12" height="550" src="https://www.blendspace.com/lessons/vwUVc80dCsqWkQ/cavernas-de-camuy?feature=embed" frameborder="0" ></iframe>
                 </div>
             </div>
+        </div>
+    </section>
+
+    <section class="success">
+        <div class="container">
+            <div class="row">
+                <div class="col-xs-12 text-center">
+                    <h2>Videos</h2>
+                    <hr class="star-light">
+                </div>
+            </div>
+            <div class="col-xs-12 col-md-offset-2 col-md-8 text-center">
+                <iframe class="col-xs-12" height="360" src="https://www.youtube.com/embed/fqTPMoptYIs?feature=player_detailpage" frameborder="0" allowfullscreen></iframe>
+            </div>
+            <div class="col-xs-12 col-md-offset-2 col-md-8 text-center margin-top-xs">
+                <iframe class="col-xs-12" height="360" src="https://www.youtube.com/embed/KMP1e0n3NN0?feature=player_detailpage" frameborder="0" allowfullscreen></iframe>
+            </div>            
         </div>
     </section>
 
