fixed navbar links and did a lot of news updates

--- a/ambiente.html
+++ b/ambiente.html
@@ -50,19 +50,25 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
                     <li>
-                        <a href="como-somos.html">¿Cómo somos los Puertorriqueños?</a>
+                        <a href="quienes-somos.html">¿Quienes Somos?</a>
                     </li>
                     <li>
-                        <a href="galeria.html">Galería</a>
+                        <a href="como-somos.html">¿Cómo somos los Puertorriqueños?</a>
                     </li>
                     <li>
                         <a href="promocion.html">Promoción Turística</a>
                     </li>
                     <li>
+                        <a href="historia.html">Nuestra Historia</a>
+                    </li>
+                    <li>
                         <a href="Noticias.html">Noticias</a>
                     </li>
                     <li>
-                        <a href="quienes-somos.html">¿Quienes Somos?</a>
+                        <a href="galeria.html">Galería</a>
+                    </li>
+                    <li>
+                        <a href="referencias.html">Referencias</a>
                     </li>
                 </ul>
             </div>
