--- a/como-somos.html
+++ b/como-somos.html
@@ -50,13 +50,25 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
                     <li>
+                        <a href="quienes-somos.html">¿Quienes Somos?</a>
+                    </li>
+                    <li>
                         <a href="ambiente.html">Ambiente</a>
                     </li>
                     <li>
                         <a href="promocion.html">Promoción Turística</a>
                     </li>
                     <li>
+                        <a href="historia.html">Nuestra Historia</a>
+                    </li>
+                    <li>
+                        <a href="Noticias.html">Noticias</a>
+                    </li>
+                    <li>
                         <a href="galeria.html">Galería</a>
+                    </li>
+                    <li>
+                        <a href="referencias.html">Referencias</a>
                     </li>
                 </ul>
             </div>
@@ -82,7 +94,6 @@
             <div class="col-lg-12">
                 <div class="container" style="height:100%">
                     <iframe src="https://docs.google.com/document/d/1WyEApNTjbYXk3ADoWiczIltejxNo3CfoxMDpuKJ7f6I/pub?embedded=true" class="col-lg-offset-2 col-lg-8 col-xs-12 col-sm-12" height="500"></iframe>
-                    <!-- <iframe src="//www.slideshare.net/slideshow/embed_code/45870058" class="col-lg-offset-2 col-lg-8"  height="500" frameborder="0" marginwidth="0" marginheight="0" scrolling="no"></iframe> -->
                 </div>
             </div>
         </div>
