--- a/galeria.html
+++ b/galeria.html
@@ -41,20 +41,32 @@
                 <a class="navbar-brand" href="index.html">Versatilidad Puertorriqueña</a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
-            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                <ul class="nav navbar-nav navbar-right">
-                    <li>
-                        <a href="como-somos.html">¿Cómo somos los Puertorriqueños?</a>
-                    </li>
-                    <li>
-                        <a href="ambiente.html">Ambiente</a>
-                    </li>
-                    <li>
-                        <a href="promocion.html">Promoción Turística</a>
-                    </li>
-                </ul>
-            </div>
-            <!-- /.navbar-collapse -->
+        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+            <ul class="nav navbar-nav navbar-right">
+                <li>
+                    <a href="quienes-somos.html">¿Quienes Somos?</a>
+                </li>
+                <li>
+                    <a href="como-somos.html">¿Cómo somos los Puertorriqueños?</a>
+                </li>
+                <li>
+                    <a href="ambiente.html">Ambiente</a>
+                </li>
+                <li>
+                    <a href="promocion.html">Promoción Turística</a>
+                </li>
+                <li>
+                    <a href="historia.html">Nuestra Historia</a>
+                </li>
+                <li>
+                    <a href="Noticias.html">Noticias</a>
+                </li>
+                <li>
+                    <a href="referencias.html">Referencias</a>
+                </li>
+            </ul>
+        </div>
+        <!-- /.navbar-collapse -->
         </div>
         <!-- /.container -->
     </nav>
