--- a/noticias.html
+++ b/noticias.html
@@ -48,33 +48,39 @@
                 <a class="navbar-brand col-xs-6 hidden-xs" href="index.html">Versatilidad Puertorriqueña</a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
-            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                <ul class="nav navbar-nav navbar-right">
-                    <li class="dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown"> Secciones <b class="caret"></b></a>
-                        <ul class="dropdown-menu">
-                            <li>
-                                <a class="hidden-md hidden-sm hidden-md hidden-lg hidden-xl" href="index.html">Inicio</a>
-                            </li>
-                            <li>
-                                <a class="class-xs-12" href="como-somos.html">¿Cómo somos los Puertorriqueños?</a>
-                            </li>
-                            <li>
-                                <a href="ambiente.html">Ambiente</a>
-                            </li>
-                            <li>
-                                <a href="galeria.html">Galería</a>
-                            </li>
-                            <li>
-                                <a href="galeria.html">Galería</a>
-                            </li>
-                            <li>
-                                <a href="promocion.html">Promoción Turística</a>
-                            </li>
-                        </ul>
-                    </li>
-                </ul>
-            </div>
+        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+            <ul class="nav navbar-nav navbar-right">
+                <li class="dropdown">
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown"> Secciones <b class="caret"></b></a>
+                    <ul class="dropdown-menu">
+                        <li>
+                            <a class="hidden-md hidden-sm hidden-md hidden-lg hidden-xl" href="index.html">Inicio</a>
+                        </li>
+                        <li>
+                            <a href="quienes-somos.html">¿Quienes Somos?</a>
+                        </li>
+                        <li>
+                            <a href="como-somos.html">¿Cómo somos los Puertorriqueños?</a>
+                        </li>
+                        <li>
+                            <a href="ambiente.html">Ambiente</a>
+                        </li>
+                        <li>
+                            <a href="promocion.html">Promoción Turística</a>
+                        </li>
+                        <li>
+                            <a href="historia.html">Nuestra Historia</a>
+                        </li>
+                        <li>
+                            <a href="galeria.html">Galería</a>
+                        </li>
+                        <li>
+                            <a href="referencias.html">Referencias</a>
+                        </li>
+                    </ul>
+                </li>
+            </ul>
+        </div>
             <!-- /.navbar-collapse -->
         </div>
         <!-- /.container -->
@@ -103,8 +109,32 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-md-10 col-xs-12 col-md-offset-1 portfolio-item">
-                    
+                <div class="col-sm-10 col-xs-12 col-sm-offset-1 portfolio-item">
+                    <div class="col-sm-4">
+                        <a href="http://www.primerahora.com/noticias/puerto-rico/nota/alzadelpetroleoesfatalparaeconomia-478674/">
+                            <img class="img-responsive news-pic" src="http://recend.apextech.netdna-cdn.com/images/tn/300/260/2013/11/29/gas.jpg_thumbnail0_1.jpg">
+                        </a>
+                    </div>
+                    <div class="col-sm-4">
+                        <a href="http://www.primerahora.com/noticias/puerto-rico/nota/alzadelpetroleoesfatalparaeconomia-478674/">
+                            <img class="img-responsive news-pic" src="http://imgcache.noticiasonline.com/fotos/economydown.jpg">
+                        </a>
+                    </div>
+                    <div class="col-sm-4">
+                        <a href="http://www.elnuevodia.com/negocios/consumo/nota/multimillonariaoportunidadparalaeconomiaboricua-2029279/">
+                            <img class="img-responsive news-pic" src="http://recend.apextech.netdna-cdn.com/images/tn/0/0/3617/1801/900/447/2015/04/03/20140423_end_negocios_worldecono.jpg">
+                        </a>
+                    </div>
+                    <div class="col-sm-offset-2 col-sm-4" style="padding-top: 30px">
+                        <a href="http://www.elnuevodia.com/negocios/finanzas/nota/seachicalaeconomiaotravez-2040653/">
+                            <img class="img-responsive news-pic" src="http://recend.apextech.netdna-cdn.com/images/tn/0/282/3175/1863/900/447/2015/04/29/20150317_rc_vistahacienda_amar6.jpg">
+                        </a>
+                    </div>
+                    <div class="col-sm-4" style="padding-top: 30px">
+                        <a href="http://www.elnuevodia.com/negocios/finanzas/nota/centroparanuevaeconomiarecomiendaposponerreformacontributiva-2015623/">
+                            <img class="img-responsive news-pic" src="http://recend.apextech.netdna-cdn.com/images/tn/0/777/5184/3359/900/447/2015/03/04/20150304_rc_vista_iva_xa_.jpg">
+                        </a>
+                    </div>
                 </div>
             </div>
         </div>
@@ -219,7 +249,6 @@
 
     <!-- Plugin JavaScript -->
     <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
-    <script src="js/classie.js"></script>
     <script src="js/cbpAnimatedHeader.js"></script>
 
     <!-- Contact Form JavaScript -->
