--- a/quienes-somos.html
+++ b/quienes-somos.html
@@ -61,14 +61,15 @@
                 <a class="navbar-brand col-xs-6 hidden-xs" href="index.html">Versatilidad Puertorriqueña</a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
-            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                <ul class="nav navbar-nav navbar-right">
-                    <li class="dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown"> Secciones <b class="caret"></b></a>
+        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+            <ul class="nav navbar-nav navbar-right">
+                <li class="dropdown">
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown"> Secciones <b class="caret"></b></a>
+                    <ul class="dropdown-menu">
                         <ul class="dropdown-menu">
                             <li>
                                 <a class="hidden-md hidden-sm hidden-md hidden-lg hidden-xl" href="index.html">Inicio</a>
-                            </li>
+                            </li>                           
                             <li>
                                 <a class="class-xs-12" href="como-somos.html">¿Cómo somos los Puertorriqueños?</a>
                             </li>
@@ -78,14 +79,23 @@
                             <li>
                                 <a href="promocion.html">Promoción Turística</a>
                             </li>
-
+                            <li>
+                                <a href="historia.html">Nuestra Historia</a>
+                            </li>
                             <li>
                                 <a href="galeria.html">Galería</a>
                             </li>
+                            <li>
+                                <a href="Noticias.html">Noticias</a>
+                            </li>
+                            <li>
+                                <a href="referencias.html">Referencias</a>
+                            </li>
                         </ul>
-                    </li>
-                </ul>
-            </div>
+                    </ul>
+                </li>
+            </ul>
+        </div>
             <!-- /.navbar-collapse -->
         </div>
         <!-- /.container -->
@@ -307,7 +317,6 @@
 
     <!-- Plugin JavaScript -->
     <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
-    <script src="js/classie.js"></script>
     <script src="js/cbpAnimatedHeader.js"></script>
 
     <!-- Contact Form JavaScript -->
