added historia section

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Website for puertorrican history class">
+    <meta name="description" content="En esta página podras encontrar el trabajo realizado en la clase de historia de Puerto Rico dada por el profesor Jerson Nieves.">
     <meta name="author" content="Bryan1010">
 
     <title>Versatilidad Puertorriqueña</title>
@@ -107,6 +107,18 @@
                     <a href="promocion.html">
                         <button class="btn btn-primary btn-lg">
                             <h1>Promoción Turística</h1>
+                        </button>
+                    </a>
+                </div>
+            </div>
+            <div class="item">
+                <a href="promocion.html">
+                    <div class="fill" style="background-image:url('https://diariovegabajeno.files.wordpress.com/2013/11/descubrimiento-de-puerto-rico-pintura.png');"></div>
+                </a>
+                <div class="carousel-caption">
+                    <a href="historia.html">
+                        <button class="btn btn-primary btn-lg">
+                            <h1>Nuestra Historia</h1>
                         </button>
                     </a>
                 </div>
