--- a/promocion.html
+++ b/promocion.html
@@ -156,7 +156,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-xs-12 text-center">
-                    <h2>Videos</h2>
+                    <h2>Vídeos</h2>
                     <hr class="star-light">
                 </div>
             </div>
