fixed noticias links

--- a/galeria.html
+++ b/galeria.html
@@ -59,7 +59,7 @@
                     <a href="historia.html">Nuestra Historia</a>
                 </li>
                 <li>
-                    <a href="Noticias.html">Noticias</a>
+                    <a href="noticias.html">Noticias</a>
                 </li>
                 <li>
                     <a href="referencias.html">Referencias</a>
