--- a/promocion.html
+++ b/promocion.html
@@ -72,7 +72,7 @@
                             <a href="galeria.html">Galería</a>
                         </li>
                         <li>
-                            <a href="Noticias.html">Noticias</a>
+                            <a href="noticias.html">Noticias</a>
                         </li>
                         <li>
                             <a href="referencias.html">Referencias</a>
