--- a/ambiente.html
+++ b/ambiente.html
@@ -62,7 +62,7 @@
                         <a href="historia.html">Nuestra Historia</a>
                     </li>
                     <li>
-                        <a href="Noticias.html">Noticias</a>
+                        <a href="noticias.html">Noticias</a>
                     </li>
                     <li>
                         <a href="galeria.html">Galería</a>
