added noticias social, updated readme and added keywords

--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="keywords" content="historia de Puerto Rico, Gran depresion, gran falacia, University Gardens, Versatilidad Puertorriquena, Versatilidad Puertorriqueña">
     <meta name="description" content="En esta página podras encontrar el trabajo realizado en la clase de historia de Puerto Rico dada por el profesor Jerson Nieves.">
-    <meta name="author" content="Bryan1010">
+    <meta name="author" content="Bryan Cruz">
 
     <title>Versatilidad Puertorriqueña</title>
 
@@ -80,7 +81,6 @@
                 </a>
                 <div class="carousel-caption">
                     <a href="como-somos.html">
-                        
                         <button class="btn btn-primary btn-lg">
                             <h1>¿Cómo somos los puertorriqueños?</h1>
                         </button>
