--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="keywords" content="historia de Puerto Rico, Gran depresion, gran falacia, University Gardens, Versatilidad Puertorriquena, Versatilidad Puertorriqueña">
-    <meta name="description" content="En esta página podras encontrar el trabajo realizado en la clase de historia de Puerto Rico dada por el profesor Jerson Nieves.">
+    <meta name="description" content="En esta página podras encontrar el trabajo realizado en la clase de historia de Puerto Rico dada por el profesor Jerson Nieves en la Escuela Especializada en Ciencias y Matemáticas University Gardens.">
     <meta name="author" content="Bryan Cruz">
 
     <title>Versatilidad Puertorriqueña</title>
