maked new historia section

--- a/noticias.html
+++ b/noticias.html
@@ -99,7 +99,7 @@
             </div>
         </div>
     </header>
-    <!-- Propósito Section -->
+    <!-- Caracter economico Section -->
     <section>
         <div class="container">
             <div class="row">
