--- a/noticias.html
+++ b/noticias.html
@@ -101,7 +101,7 @@
     </header>
     <!-- Caracter economico Section -->
     <section>
-        <div class="container">
+        <div id="portfolio" class="container">
             <div class="row">
                 <div class="col-xs-12 text-center">
                     <h2>Carácter Económico</h2>
@@ -111,12 +111,23 @@
             <div class="row">
                 <div class="col-sm-10 col-xs-12 col-sm-offset-1 portfolio-item">
                     <div class="col-sm-4">
-                        <a href="http://www.primerahora.com/noticias/puerto-rico/nota/alzadelpetroleoesfatalparaeconomia-478674/">
+                        <a href="#modaleconomico1" class="portfolio-link" data-toggle="modal">
+                            <div class="caption">
+                                <div class="caption-content">
+                                    <i class="fa fa-newspaper-o fa-3x"></i>
+                                </div>
+                            </div>
+                        <!-- <a href="http://www.primerahora.com/noticias/puerto-rico/nota/alzadelpetroleoesfatalparaeconomia-478674/"> -->
                             <img class="img-responsive news-pic" src="http://recend.apextech.netdna-cdn.com/images/tn/300/260/2013/11/29/gas.jpg_thumbnail0_1.jpg">
                         </a>
                     </div>
                     <div class="col-sm-4">
-                        <a href="http://www.primerahora.com/noticias/puerto-rico/nota/alzadelpetroleoesfatalparaeconomia-478674/">
+                        <a href="#modaleconomico2" class="portfolio-link" data-toggle="modal">
+                            <div class="caption">
+                                <div class="caption-content">
+                                    <i class="fa fa-newspaper-o fa-3x"></i>
+                                </div>
+                            </div>
                             <img class="img-responsive news-pic" src="http://imgcache.noticiasonline.com/fotos/economydown.jpg">
                         </a>
                     </div>
@@ -271,6 +282,55 @@
         </a>
     </div>
 
+<!-- Portfolio Modals -->
+    <div class="portfolio-modal modal fade" id="modaleconomico1" tabindex="-1" role="dialog" aria-hidden="true">
+        <div class="modal-content">
+            <div class="close-modal" data-dismiss="modal">
+                <div class="lr">
+                    <div class="rl">
+                    </div>
+                </div>
+            </div>
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-8 col-lg-offset-2">
+                        <div class="modal-body">
+                            <h2>Alza del petróleo es fatal para economía</h2>
+                            <hr class="star-primary">
+                            <img src="http://recend.apextech.netdna-cdn.com/images/tn/300/260/2013/11/29/gas.jpg_thumbnail0_1.jpg" class="img-responsive img-centered" alt="">
+                            <p>Los economistas del país estiman que cada aumento de $10 en el precio del barril de petróleo le cuesta $750 millones a la economía de Puerto Rico.</p>
+                            <a href="http://www.primerahora.com/noticias/puerto-rico/nota/alzadelpetroleoesfatalparaeconomia-478674/" target="_blank" class="fa fa-newspaper-o btn btn-default">  Leer la Noticia</a>
+                            <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Cerrar</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="portfolio-modal modal fade" id="modaleconomico2" tabindex="-1" role="dialog" aria-hidden="true">
+        <div class="modal-content">
+            <div class="close-modal" data-dismiss="modal">
+                <div class="lr">
+                    <div class="rl">
+                    </div>
+                </div>
+            </div>
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-8 col-lg-offset-2">
+                        <div class="modal-body">
+                            <h2>VIDEORREPORTAJE: El pueblo propone una nueva economía</h2>
+                            <hr class="star-primary">
+                            <img src="http://recend.apextech.netdna-cdn.com/images/tn/300/260/2013/11/29/gas.jpg_thumbnail0_1.jpg" class="img-responsive img-centered" alt="">
+                            <p>Ciudadanos y líderes sindicales dan sus propuestas para reducir la deuda de 17,000 millones del gobierno</p>
+                            <a href="http://www.elnuevodia.com/videos/noticias/locales/videorreportajeelpuebloproponeunanuevaeconomia-163139/" target="_blank" class="fa fa-newspaper-o btn btn-default">  Leer la Noticia</a>
+                            <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Cerrar</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 
     <!-- jQuery -->
     <script src="js/jquery.js"></script>
@@ -280,6 +340,7 @@
 
     <!-- Plugin JavaScript -->
     <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
+    <script src="js/classie.js"></script>
     <script src="js/cbpAnimatedHeader.js"></script>
 
     <!-- Contact Form JavaScript -->
