added more modals and fixed stuff

--- a/noticias.html
+++ b/noticias.html
@@ -7,10 +7,10 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="description" content="En esta seccion se encontrarán varias noticias de diferentes carácteres.">
+    <meta name="author" content="Bryan Cruz">
 
-    <title>Promoción Turística</title>
+    <title>Noticias</title>
 
     <!-- Bootstrap Core CSS - Uses Bootswatch Flatly Theme: http://bootswatch.com/flatly/ -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -117,7 +117,6 @@
                                     <i class="fa fa-newspaper-o fa-3x"></i>
                                 </div>
                             </div>
-                        <!-- <a href="http://www.primerahora.com/noticias/puerto-rico/nota/alzadelpetroleoesfatalparaeconomia-478674/"> -->
                             <img class="img-responsive news-pic" src="http://recend.apextech.netdna-cdn.com/images/tn/300/260/2013/11/29/gas.jpg_thumbnail0_1.jpg">
                         </a>
                     </div>
@@ -132,12 +131,22 @@
                         </a>
                     </div>
                     <div class="col-sm-4">
-                        <a href="http://www.elnuevodia.com/negocios/consumo/nota/multimillonariaoportunidadparalaeconomiaboricua-2029279/">
+                        <a href="#modaleconomico3" class="portfolio-link" data-toggle="modal">
+                            <div class="caption">
+                                <div class="caption-content">
+                                    <i class="fa fa-newspaper-o fa-3x"></i>
+                                </div>
+                            </div>
                             <img class="img-responsive news-pic" src="http://recend.apextech.netdna-cdn.com/images/tn/0/0/3617/1801/900/447/2015/04/03/20140423_end_negocios_worldecono.jpg">
                         </a>
                     </div>
                     <div class="col-sm-offset-2 col-sm-4" style="padding-top: 30px">
-                        <a href="http://www.elnuevodia.com/negocios/finanzas/nota/seachicalaeconomiaotravez-2040653/">
+                        <a href="#modaleconomico4" class="portfolio-link" data-toggle="modal">
+                            <div class="caption">
+                                <div class="caption-content">
+                                    <i class="fa fa-newspaper-o fa-3x"></i>
+                                </div>
+                            </div>
                             <img class="img-responsive news-pic" src="http://recend.apextech.netdna-cdn.com/images/tn/0/282/3175/1863/900/447/2015/04/29/20150317_rc_vistahacienda_amar6.jpg">
                         </a>
                     </div>
@@ -324,6 +333,54 @@
                             <img src="http://recend.apextech.netdna-cdn.com/images/tn/300/260/2013/11/29/gas.jpg_thumbnail0_1.jpg" class="img-responsive img-centered" alt="">
                             <p>Ciudadanos y líderes sindicales dan sus propuestas para reducir la deuda de 17,000 millones del gobierno</p>
                             <a href="http://www.elnuevodia.com/videos/noticias/locales/videorreportajeelpuebloproponeunanuevaeconomia-163139/" target="_blank" class="fa fa-newspaper-o btn btn-default">  Leer la Noticia</a>
+                            <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Cerrar</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="portfolio-modal modal fade" id="modaleconomico3" tabindex="-1" role="dialog" aria-hidden="true">
+        <div class="modal-content">
+            <div class="close-modal" data-dismiss="modal">
+                <div class="lr">
+                    <div class="rl">
+                    </div>
+                </div>
+            </div>
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-8 col-lg-offset-2">
+                        <div class="modal-body">
+                            <h2>Multimillonaria oportunidad para la economía boricua</h2>
+                            <hr class="star-primary">
+                            <img src="http://recend.apextech.netdna-cdn.com/images/tn/0/0/3617/1801/900/447/2015/04/03/20140423_end_negocios_worldecono.jpg" class="img-responsive img-centered" alt="">
+                            <p>Estudio revela que las megaempresas están dispuestas a comprar más productos locales </p>
+                            <a href="http://www.elnuevodia.com/negocios/consumo/nota/multimillonariaoportunidadparalaeconomiaboricua-2029279/" target="_blank" class="fa fa-newspaper-o btn btn-default">  Leer la Noticia</a>
+                            <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Cerrar</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="portfolio-modal modal fade" id="modaleconomico4" tabindex="-1" role="dialog" aria-hidden="true">
+        <div class="modal-content">
+            <div class="close-modal" data-dismiss="modal">
+                <div class="lr">
+                    <div class="rl">
+                    </div>
+                </div>
+            </div>
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-8 col-lg-offset-2">
+                        <div class="modal-body">
+                            <h2> Se achica la economía otra vez</h2>
+                            <hr class="star-primary">
+                            <img src="http://recend.apextech.netdna-cdn.com/images/tn/0/282/3175/1863/900/447/2015/04/29/20150317_rc_vistahacienda_amar6.jpg" class="img-responsive img-centered" alt="">
+                            <p>EEl producto bruto se contrajo 0.9% en el fiscal 2014 y todavía se desconoce a ciencia cierta el impacto de un IVA</p>
+                            <a href="http://www.elnuevodia.com/negocios/finanzas/nota/seachicalaeconomiaotravez-2040653/" target="_blank" class="fa fa-newspaper-o btn btn-default">  Leer la Noticia</a>
                             <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Cerrar</button>
                         </div>
                     </div>
