--- a/referencias.html
+++ b/referencias.html
@@ -7,10 +7,10 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
+    <meta name="description" content="En esta sección se encuentran todas las referencias que se usaron en todas las secciones incluyendo las que se usaron en los ensayos y las presentaciones">
     <meta name="author" content="">
 
-    <title>Promoción Turística</title>
+    <title>Referencias</title>
 
     <!-- Bootstrap Core CSS - Uses Bootswatch Flatly Theme: http://bootswatch.com/flatly/ -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
