Fixed email shit on quienes somos page and added essay la gran falacia

--- a/historia.html
+++ b/historia.html
@@ -132,3 +132,17 @@
             </div>
         </div>
     </section>
+
+    <section class="success">
+        <div class="container">
+            <div class="row">
+                <div class="col-sm-12 col-xs-12 text-center">
+                    <h2>Ensayo Reflexivo: La Gran Falacia</h2>
+                    <hr class="star-light">
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-sm-offset-2 col-sm-8">
+                    <iframe height="500" width='700' src="https://docs.google.com/document/d/16TdTuK4S62jMxv87k6WYMaOW9FTTidpxavApmyxdWnk/pub?embedded=true"></iframe>
+                </div>
+            </div>
