fixed typos and image on index

--- a/historia.html
+++ b/historia.html
@@ -93,7 +93,7 @@
                 <div class="col-xs-12">
                     <div class="intro-text">
                         <span class="name">Nuestra  Historia</span>
-                        <span class="skills">En esta sección de la página encontraran dos presentaciones, la primera se titula El Puerto Rico Americano y la segunda El Nacionalismoy Populismo. Ademas incluimos un ensayo reflexivo deldocumental "La Gran Falacia" y fotos y videos para reforzar lo que dice el ensallo.</span>
+                        <span class="skills">En esta sección de la página encontraran dos presentaciones, la primera se titula El Puerto Rico Americano y la segunda El Nacionalismo y Populismo. Ademas incluimos un ensayo reflexivo del documental "La Gran Falacia" y fotos y videos para reforzar lo que dice el ensayo.</span>
                     </div>
                 </div>
             </div>
