--- a/historia.html
+++ b/historia.html
@@ -127,7 +127,7 @@
             <div class="row">
                 <div class="col-sm-12 col-xs-12 text-center">
                     <h2>Ensayo Reflexivo: La Gran Falacia</h2>
-                    <hr class="star-light">
+                    <hr class="star-primary">
                 </div>
             </div>
             <div class="row">
