fixed shit and started changing template on ambiente .html

--- a/historia.html
+++ b/historia.html
@@ -135,3 +135,5 @@
                     <iframe height="500" width='700' src="https://docs.google.com/document/d/16TdTuK4S62jMxv87k6WYMaOW9FTTidpxavApmyxdWnk/pub?embedded=true"></iframe>
                 </div>
             </div>
+        </div>
+    </section>
