--- a/ambiente.html
+++ b/ambiente.html
@@ -1,25 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
-<!-- hacer one pager con las fotos, modal en el ensayo -->
+<!-- hacer one pager y de promocion turistica y ponerle modales para ensayos, videos y fotos -->
 
 <head>
 
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
+    <meta name="description" content="en esta seccion encontraras un ensayo de ambiente y varias fotos y videos sustentando el mismo.">
     <meta name="author" content="">
 
-    <title>Versatilidad Puertoriqueña</title>
+    <title>Ambiente</title>
 
-    <!-- Bootstrap Core CSS -->
+    <!-- Bootstrap Core CSS - Uses Bootswatch Flatly Theme: http://bootswatch.com/flatly/ -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom CSS -->
-    <link href="css/modern-business.css" rel="stylesheet">
+    <link href="css/one-pager.css" rel="stylesheet">
 
     <!-- Custom Fonts -->
     <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+    <link href="http://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
+    <link href="http://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic" rel="stylesheet" type="text/css">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -31,10 +33,10 @@
 
 </head>
 
-<body>
+<body id="page-top" class="index">
 
     <!-- Navigation -->
-    <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+    <nav class="navbar navbar-inverse navbar-fixed-top col-xs-12" role="navigation">
         <div class="container">
             <!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar-header">
@@ -44,57 +46,82 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="index.html">Versatilidad Puertorriqueña</a>
+                <a class="navbar-brand col-xs-6 hidden-xs" href="index.html">Versatilidad Puertorriqueña</a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
-            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                <ul class="nav navbar-nav navbar-right">
-                    <li>
-                        <a href="quienes-somos.html">¿Quienes Somos?</a>
-                    </li>
-                    <li>
-                        <a href="como-somos.html">¿Cómo somos los Puertorriqueños?</a>
-                    </li>
-                    <li>
-                        <a href="promocion.html">Promoción Turística</a>
-                    </li>
-                    <li>
-                        <a href="historia.html">Nuestra Historia</a>
-                    </li>
-                    <li>
-                        <a href="noticias.html">Noticias</a>
-                    </li>
-                    <li>
-                        <a href="galeria.html">Galería</a>
-                    </li>
-                    <li>
-                        <a href="referencias.html">Referencias</a>
-                    </li>
-                </ul>
-            </div>
+        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+            <ul class="nav navbar-nav navbar-right">
+                <li class="dropdown">
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown"> Secciones <b class="caret"></b></a>
+                    <ul class="dropdown-menu">
+                        <li>
+                            <a class="hidden-md hidden-sm hidden-md hidden-lg hidden-xl" href="index.html">Inicio</a>
+                        </li>
+                        <li>
+                            <a href="quienes-somos.html">¿Quienes Somos?</a>
+                        </li>
+                        <li>
+                            <a href="como-somos.html">¿Cómo somos los Puertorriqueños?</a>
+                        </li>
+                        <li>
+                            <a href="promocion.html">Promoción Turística</a>
+                        </li>
+                        <li>
+                            <a href="historia.html">Nuestra Historia</a>
+                        </li>
+                        <li>
+                            <a href="noticias.html">Noticias</a>
+                        </li>
+                        <li>
+                            <a href="galeria.html">Galería</a>
+                        </li>          
+                        <li> 
+                            <a href="referencias.html">Referencias</a>
+                    </ul>
+                </li>
+            </ul>
+        </div>
             <!-- /.navbar-collapse -->
         </div>
         <!-- /.container -->
     </nav>
 
-    <!-- Page Content -->
-    <div class="container">
-
-        <!-- Page Heading/Breadcrumbs -->
-        <div class="row">
-            <div class="col-lg-12">
-                <h1 class="page-header text-center">Ambiente
-                </h1>
+    <!-- Header -->
+    <header>
+        <div class="container">
+            <div class="row">
+                <div class="col-xs-12">
+                    <div class="intro-text">
+                        <span class="name">Ambiente</span>
+                        <span class="skills">En esta sección de la pagina encontrarás un esnayo con el tema ambiente de puerto rico el cual es titulado La gran creación de Puerto Rico</span>
+                    </div>
+                </div>
             </div>
         </div>
+    </header>
         <!-- /.row -->
+    <section>
+        <div class="container">
+            <div class="row">
+                <div class="col-sm-12 col-xs-12 text-center">
+                    <h2>Ensayo Reflexivo: La Gran Falacia</h2>
+                    <hr class="star-primary">
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-sm-offset-2 col-sm-8">
+                    <iframe src="https://docs.google.com/document/d/1_MlIRryisbhbccwwc57KVkBkeuK5Ke4TmB2y0yOOpU0/pub?embedded=true" class="col-lg-offset-2 col-lg-8 col-xs-12 col-sm-12" height="500" width='700'></iframe>
+                </div>
+            </div>
+        </div>
+    </section>
 
         <!-- Content Row -->
         <div class="row">
             <div class="col-lg-12">
                 <h3 class="text-center"> Ensayo: La Gran Creación de Puerto Rico </h3>
                 <div class="container" style="height:100%">
-                    <iframe src="https://docs.google.com/document/d/1_MlIRryisbhbccwwc57KVkBkeuK5Ke4TmB2y0yOOpU0/pub?embedded=true" class="col-lg-offset-2 col-lg-8 col-xs-12 col-sm-12" height="500"></iframe>
+                    
                 </div>
             </div>
         </div>
@@ -108,6 +135,18 @@
 
     <!-- Bootstrap Core JavaScript -->
     <script src="js/bootstrap.min.js"></script>
+
+    <!-- Plugin JavaScript -->
+    <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
+    <script src="js/classie.js"></script>
+    <script src="js/cbpAnimatedHeader.js"></script>
+
+    <!-- Contact Form JavaScript -->
+    <script src="js/jqBootstrapValidation.js"></script>
+    <script src="js/contact_me.js"></script>
+
+    <!-- Custom Theme JavaScript -->
+    <script src="js/freelancer.js"></script>
 
 </body>
 
