--- a/historia.html
+++ b/historia.html
@@ -135,5 +135,26 @@
                     <iframe height="500" width='700' src="https://docs.google.com/document/d/16TdTuK4S62jMxv87k6WYMaOW9FTTidpxavApmyxdWnk/pub?embedded=true"></iframe>
                 </div>
             </div>
+            <hr>
+            <div class="row">
+                <div class="col-sm-12 col-xs-12 text-center">
+                    <h2>Imágenes y vídeos para reforzar el ensayo</h2>
+                    <hr class="star-primary">
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-sm-offset-2 col-sm-4 col-xs-12">
+                    <img class="img-responsive" src="https://garygutierrezpr.files.wordpress.com/2014/10/the_great_fallacy_poster.jpg?w=268&h=435"></img>
+                </div>
+                <div class="col-sm-4 col-xs-12">
+                    <img class="img-responsive" src="http://3.bp.blogspot.com/-DcIjdA_N5C4/Ua4ZzHaeHLI/AAAAAAAALAA/fltMYiciMjk/s410/conspiracion.jpg>"></img>
+                </div>
+            </div>
+            <hr>
+            <div class="row">
+                <div class="col-sm-offset-2 col-sm-8 col-xs-12">
+                    <iframe width='700' height='400' autostart="false" autoplay="" src='http://puertorico.univision.com/videos/video/2014-04-24/investigan-mal-uso-de-fondos/embed' scrolling='no' frameborder='0' allowfullscreen></iframe>
+                </div>
+            </div>
         </div>
     </section>
