added referencias, modified homepage, group picture, galery.

--- a/referencias.html
+++ b/referencias.html
@@ -99,3 +99,23 @@
             </div>
         </div>
     </header>
+
+    <section>
+        <div id="portfolio" class="container">
+            <div class="container">
+                <div class="row">
+                    <div class="col-xs-12 text-center">
+                        <h2>Referencias para las Noticias</h2>
+                        <hr class="star-primary">
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-lg-8 col-xs-12 col-lg-offset-2">
+                        <a href="http://www.elnuevodia.com/negocios/finanzas/nota/centroparanuevaeconomiarecomiendaposponerreformacontributiva-2015623/" target="_blank"><p>http://www.elnuevodia.com/negocios/finanzas/nota/centroparanuevaeconomiarecomiendaposponerreformacontributiva-2015623/
+                        </p></a>
+                        <a href="http://www.primerahora.com/noticias/puerto-rico/nota/alzadelpetroleoesfatalparaeconomia-478674/" target="_blank"><p>http://www.primerahora.com/noticias/puerto-rico/nota/alzadelpetroleoesfatalparaeconomia-478674/</p></a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
