--- a/ambiente.html
+++ b/ambiente.html
@@ -104,7 +104,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-sm-12 col-xs-12 text-center">
-                    <h2>Ensayo Reflexivo: La Gran Falacia</h2>
+                    <h2>Ensayo: La Gran Creación de Puerto Rico</h2>
                     <hr class="star-primary">
                 </div>
             </div>
@@ -118,8 +118,7 @@
 
         <!-- Content Row -->
         <div class="row">
-            <div class="col-lg-12">
-                <h3 class="text-center"> Ensayo: La Gran Creación de Puerto Rico </h3>
+            <div class="col-lg-12"> </h3>
                 <div class="container" style="height:100%">
                     
                 </div>
