fixed galeria and historia nav dropdown

--- a/galeria.html
+++ b/galeria.html
@@ -45,7 +45,7 @@
             <ul class="nav navbar-nav navbar-right">
                 <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown"> Secciones <b class="caret"></b></a>
-                    <ul class="dropdown-menu col-xs-6">
+                    <ul class="dropdown-menu col-xs-12">
                         <li>
                             <a class="hidden-md hidden-sm hidden-md hidden-lg hidden-xl" href="index.html">Inicio</a>
                         </li>
@@ -64,10 +64,10 @@
                             <a href="historia.html">Nuestra Historia</a>
                         </li>
                         <li>
-                            <a href="galeria.html">Galería</a>
+                            <a href="noticias.html">Noticias</a>
                         </li>
                         <li>
-                            <a href="noticias.html">Noticias</a>
+                            <a href="referencias.html">Referencias</a>
                         </li>
                     </ul>
                 </li>
