adding modals for noticias

--- a/noticias.html
+++ b/noticias.html
@@ -272,14 +272,22 @@
                         </a>
                     </div>
                     <div class="col-sm-offset-2 col-sm-4" style="padding-top: 30px">
-                        <a href="">
-">
+                        <a href="#modalsocial4" class="portfolio-link" data-toggle="modal">
+                            <div class="caption">
+                                <div class="caption-content">
+                                    <i class="fa fa-newspaper-o fa-3x"></i>
+                                </div>
+                            </div>
                             <img  src="http://receph.apextech.netdna-cdn.com/images/tnph3/615/304/1/1/615/304/2015/05/02/crop_dsc_1845.jpg" class="img-responsive news-pic">
                         </a>
                     </div>
                     <div class="col-sm-4" style="padding-top: 30px">
-                        <a href="http://www.primerahora.com/noticias/puerto-rico/nota/elbullyingnoeschiste-1080642/
-">
+                        <a href="#modalsocial5" class="portfolio-link" data-toggle="modal">
+                            <div class="caption">
+                                <div class="caption-content">
+                                    <i class="fa fa-newspaper-o fa-3x"></i>
+                                </div>
+                            </div>
                             <img  src="http://receph.apextech.netdna-cdn.com/images/tnph3/615/304/1/1/615/304/2015/05/01/crop_bu.jpg" class="img-responsive news-pic">
                         </a>
                     </div>
@@ -288,7 +296,7 @@
         </div>
     </section>
     
-    <section class="success">
+    <section id="portfolio" class="success">
         <div class="container">
         	<div class="row">
                 <div class="col-xs-12 text-center">
@@ -664,8 +672,32 @@
                             <h2>Estudiantes de Escuelas Públicas Aprenden sobre Construcción</h2>
                             <hr class="star-primary">
                             <img class="img-responsive img-centered" src="http://receph.apextech.netdna-cdn.com/images/tnph3/615/304/1/1/615/304/2015/05/02/crop_dsc_1845.jpg" alt="">
-                            <p>La gran preocupación de los padres con niños que padecen de autismo es “qué será de él o ella cuando yo no esté”. </p>
+                            <p></p>
                             <a href="http://www.primerahora.com/noticias/puerto-rico/nota/estudiantesdeescuelaspublicasaprendensobreconstruccion-1080798/">  Leer la Noticia</a>
+                            <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Cerrar</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="portfolio-modal modal fade" id="modalsocial5" tabindex="-1" role="dialog" aria-hidden="true">
+        <div class="modal-content">
+            <div class="close-modal" data-dismiss="modal">
+                <div class="lr">
+                    <div class="rl">
+                    </div>
+                </div>
+            </div>
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-8 col-lg-offset-2">
+                        <div class="modal-body">
+                            <h2></h2>
+                            <hr class="star-primary">
+                            <img class="img-responsive img-centered" src="http://receph.apextech.netdna-cdn.com/images/tnph3/615/304/1/1/615/304/2015/05/01/crop_bu.jpg" alt="">
+                            <p></p>
+                            <a href="http://www.primerahora.com/noticias/puerto-rico/nota/elbullyingnoeschiste-1080642/">  Leer la Noticia</a>
                             <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Cerrar</button>
                         </div>
                     </div>
