--- a/quienes-somos.html
+++ b/quienes-somos.html
@@ -121,7 +121,7 @@
             </div>
             <div class="row">
                 <div class="col-lg-8 col-xs-12 col-lg-offset-2">
-                    <p>Esta página es producto de un proyecto de la clase de historia de Puerto Rico realizado por alumnos de duodécimo grado de la Escuela Especializada en Ciencias y Matemáticas University Gardens. En esta página se busca instruir a nuestros visitantes sobre la historia de nuestra isla, Puerto Rico. El propósito es demostrar la versatilidad puertorriqueña y como con esfuerzo y trabajo hemos podido salir adelante.</p>
+                    <p>Esta página es producto de un proyecto de la clase de Historia de Puerto Rico realizado por alumnos de duodécimo grado de la Escuela Especializada en Ciencias y Matemáticas University Gardens. En esta página se busca instruir a nuestros visitantes sobre la historia de nuestra isla, Puerto Rico. El propósito es demostrar la versatilidad puertorriqueña y como con esfuerzo y trabajo hemos podido salir adelante.</p>
 
                 </div>
             </div>
@@ -139,7 +139,7 @@
             </div>
             <div lass="row">
                 <div class="col-lg-8 col-xs-12 col-lg-offset-2">
-                    <p>Se espera que al realizar esta página web se pueda informar y ayudar a cualquier persona que esté interesado en aprender la historia de nuestra bella isla e informarlos de los acontecimientos actuales en los que estamos pasando. Los que entren a la página podrán disfrutar de la versatilidad de lo que es ser puertorriqueño. </p>
+                    <p>Se espera que al realizar esta página web se pueda informar y ayudar a cualquier persona que esté interesada en aprender la historia de nuestra isla, Puerto Rico. sobre la historia de nuestra isla, Puerto Rico. Además, informarles de los acontecimientos actuals por los que pasa Puerto Rico. Aquellos que tengan acceso a la página web, podrán disfrutar de la versatilidad de los puertorriqueños.</p>
                 </div>
             </div>
         </div>
