--- a/ambiente.html
+++ b/ambiente.html
@@ -93,7 +93,7 @@
                 <div class="col-xs-12">
                     <div class="intro-text">
                         <span class="name">Ambiente</span>
-                        <span class="skills">En esta sección de la pagina encontrarás un esnayo con el tema ambiente de puerto rico el cual es titulado La gran creación de Puerto Rico</span>
+                        <span class="skills">En esta sección de la página encontrarán ensayos con enfoque en el Ambiente de Puerto Rico, el cual se titula "La Gran Creación de Puerto Rico"</span>
                     </div>
                 </div>
             </div>
