fixed things and added stuff

--- a/noticias.html
+++ b/noticias.html
@@ -525,10 +525,10 @@
                 <div class="row">
                     <div class="col-lg-8 col-lg-offset-2">
                         <div class="modal-body">
-                            <h2>La jugarreta de los empleos</h2>
+                            <h2>Un sistema que no da más</h2>
                             <hr class="star-primary">
                             <img class="img-responsive img-centered" src="http://recend.apextech.netdna-cdn.com/images/tn/2106/1004/5400/5400/473/618/2015/04/21/esp_ciudadanoportada.jpg" alt="">
-                            <p>"Los partidos usan el servicio público para levantar fondos y hacer campañas. Eso hay que acabarlo ya porque está destruyendo el Gobierno."</p>
+                            <p>La ineficiencia gubernamental cuesta miles de millones de dólares a los boricuas</p>
                             <a href="http://www.elnuevodia.com/noticias/politica/nota/unsistemaquenodamas-2037012/">  Leer la Noticia</a>
                             <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Cerrar</button>
                         </div>
@@ -672,7 +672,7 @@
                             <h2>Estudiantes de Escuelas Públicas Aprenden sobre Construcción</h2>
                             <hr class="star-primary">
                             <img class="img-responsive img-centered" src="http://receph.apextech.netdna-cdn.com/images/tnph3/615/304/1/1/615/304/2015/05/02/crop_dsc_1845.jpg" alt="">
-                            <p></p>
+                            <p>La iniciativa, que impactó a 300 niños y niñas, educa sobre los diversos tipos de construcción y las oportunidades de empleo en esta industria.</p>
                             <a href="http://www.primerahora.com/noticias/puerto-rico/nota/estudiantesdeescuelaspublicasaprendensobreconstruccion-1080798/">  Leer la Noticia</a>
                             <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Cerrar</button>
                         </div>
