trying height on gallery carrousel

--- a/galeria.html
+++ b/galeria.html
@@ -23,6 +23,12 @@
 	<script src="js/jquery.removeWhitespace.min.js"></script>
 	<script src="js/jquery.collageCaption.min.js"></script>
 
+    <style type="text/css">
+         header.carousel {
+            height: 60%;
+        }
+    </style>
+
 </head>
 
 <body>
