--- a/promocion.html
+++ b/promocion.html
@@ -110,6 +110,7 @@
             </div>
             <div class="row">
                 <div class="col-lg-10 col-xs-12 col-lg-offset-1 portfolio-item">
+                   <img src="img/flyer-cavernas.png" class="img-responsive">
                    <img src="img/brochure-1.png" class="img-responsive">
                    <img src="img/brochure-2.png" class="img-responsive">
                 </div>
